fixing more layout issues, made badge detail page responsive

--- a/badges/static/css/materialize.css
+++ b/badges/static/css/materialize.css
@@ -1962,7 +1962,10 @@ html {
   box-sizing: inherit; }
 
 ul:not(.browser-default) {
-  padding-left: 0; }
+  padding-left: 0;
+  list-style-type: none; }
+  ul:not(.browser-default) li {
+    list-style-type: none; }
 
 a {
   color: #039be5;
